fix BDD test findings
